# conan_test_prebuilt_binaries

./: .gitignore  README.MD  run.bat
myhellolib/: CMakeLists.txt  conanfile.py
myhellolib/include/: myhellolib.h
myhellolib/src/: myhellolib.cpp
myhellolib/test_package/: CMakeLists.txt  conanfile.py
myhellolib/test_package/src/: example.cpp
prebuilt_binaries/: conanfile.py
prebuilt_binaries/vendor_hello_library/windows/x86_64/: myhellolib.lib  slc-myhellolib.lib
prebuilt_binaries/vendor_hello_library/windows/x86_64/include/: myhellolib.h
testApp/: CMakeLists.txt  compile.bat  conanfile.py
testApp/src/: main.cpp  testApp.cpp  testApp.h
testApp/test_package/: conanfile.py
